@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1423 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1424 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -697,3 +697,5 @@ Changes from NetBSD 5.0 to NetBSD 6.0:
 	i386: Add PAE support. [jym 20100727]
 	hpcarm, hpcmips, hpcsh: Switch to using Xorg servers and binaries.
 		[tsutsui 20100731]
+	bebox: Support xserver.  It tested only s3(TRIO 64V+).
+		[kiyohara 20100801]
